# BattleshipGame

./: .gitignore  README.md  c  client.cpp  s  server.cpp
NodeGuiClient/: package-lock.json  package.json
NodeGuiClient/src/: board.js  boardGUI.js  client.js  connection.js  game.js  gui.js  index.js  message.js  player.js
NodeGuiClient/src/GuiWidgets/: boardWidget.js  connectionScreen.js  gameScreen.js  guiBoard.js  guiLayout.js  guiRoundTimer.js  guiScreen.js  guiWidget.js  lobbyScreen.js  menuScreen.js  playersListWidget.js  roundTimerWidget.js  serverStatusWidget.js
client/: Message.cpp  Message.h  client.cpp  client.h
server/: CMakeLists.txt
server/include/: Client.h  Game.h  Handler.h  Map.h  Message.h  Player.h  Server.h  ShotVoting.h  Vote.h  Voting.h  server(1).h  server.h
server/source/: Client.cpp  Game.cpp  Map.cpp  Message.cpp  Player.cpp  Server.cpp  ShotVoting.cpp  Vote.cpp  Voting.cpp  main.cpp  server(1).cpp  server.cpp
